# NVetor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  tests.cpp
lib/: comum.c  comum.h
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: Vetor.cpp  Vetor.h  Vetor3D.cpp  Vetor3D.h  comum.cpp  comum.h
testes/: funcionamento.cpp  performance.cpp
tests/: compare.sh  funciona1D.h  funciona3D.h  performance.h
vetor/: Vetor.cpp  Vetor.h  Vetor3D.cpp  Vetor3D.h
